@@ -38,6 +38,8 @@ exception statement from your version. */
 
 package java.awt.print;
 
+import java.awt.HeadlessException;
+
 import javax.print.PrintService;
 import javax.print.attribute.PrintRequestAttributeSet;
 
@@ -146,7 +148,8 @@ public abstract class PrinterJob
    *
    * @return The modified <code>PageFormat</code>.
    */
-  public abstract PageFormat pageDialog(PageFormat page_format);
+  public abstract PageFormat pageDialog(PageFormat page_format)
+    throws HeadlessException;
 
   /**
    * Prints the pages.
@@ -166,7 +169,8 @@ public abstract class PrinterJob
    * @return <code>false</code> if the user cancels the dialog box,
    * <code>true</code> otherwise.
    */
-  public abstract boolean printDialog();
+  public abstract boolean printDialog()
+    throws HeadlessException;
 
   /**
    * Displays a dialog box to the user which allows the print job
@@ -175,7 +179,8 @@ public abstract class PrinterJob
    * @return <code>false</code> if the user cancels the dialog box,
    * <code>true</code> otherwise.
    */
-  public abstract boolean printDialog(PrintRequestAttributeSet attributes);
+  public abstract boolean printDialog(PrintRequestAttributeSet attributes)
+    throws HeadlessException;
 
   /**
    * This sets the pages that are to be printed.
