@@ -1,3 +1,9 @@
+2005-01-20  Michael Koch  <konqueror@gmx.de>
+
+	* java/awt/print/PrinterJob.java
+	(pageDialog): Throws java.awt.HeadlessException.
+	(printDialog): Likewise.
+
 2005-01-20  Mark Wielaard  <mark@klomp.org>
 
 	* jni/gtk-peer/gtkpeer.h (gdk_env): Fix prototype.
